# Livekit-AI-note-taker

./: .gitignore  ARCHITECTURE.md  AWS_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL_FIX.md  LIBRARY_CONVERSION.md  LIBRARY_OVERVIEW.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_PUBLISHING.md  QUICKSTART.md  QUICK_FIX.md  README.md  STRUCTURE.md  TESTING_AND_PUBLISHING_SUMMARY.md  TESTING_GUIDE.md  fix-and-test.sh  pyproject.toml  quick-test.sh  requirements-dev.txt  requirements.txt  run_tests.sh  setup-dev.sh  setup.py
.github/workflows/: publish.yml  test.yml
ainote/: __init__.py
ainote/core/: __init__.py  client.py  meeting.py
ainote/exporters/: __init__.py  docx_exporter.py  exporter.py  json_exporter.py  markdown_exporter.py  pdf_exporter.py  txt_exporter.py
ainote/models/: __init__.py  export.py  note.py  transcript.py
ainote/services/: __init__.py  ai_service.py  transcription.py
ainote/utils/: __init__.py
docs/: QUICKSTART.md
examples/: README.md  __init__.py  advanced_usage.py  aws_transcription_example.py  basic_usage.py  simple_recorder.py  transcribe_audio.py
livekit_note_taker/: __init__.py
livekit_note_taker/adapters/: __init__.py
livekit_note_taker/ai/: __init__.py  base.py
livekit_note_taker/audio/: __init__.py  buffer.py  recorder.py
livekit_note_taker/core/: __init__.py  events.py  manager.py  session.py
livekit_note_taker/export/: __init__.py  base.py
livekit_note_taker/storage/: __init__.py  base.py
livekit_note_taker/transcription/: README.md  __init__.py  aws.py  base.py
tests/: README.md  __init__.py  conftest.py  test_audio_buffer.py  test_client.py  test_meeting.py  test_models.py  test_session.py
