[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ainote"
version = "0.1.0"
description = "Cost-effective Python library for meeting transcription and AI-powered note taking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["meeting", "transcription", "ai", "notes", "summaries", "aws-transcribe", "openai"]
authors = [
    {name = "AI Note Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
pdf = ["reportlab>=4.0.0"]
docx = ["python-docx>=1.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ainote"
Documentation = "https://github.com/yourusername/ainote/docs"
Repository = "https://github.com/yourusername/ainote"
"Bug Tracker" = "https://github.com/yourusername/ainote/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
