[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-note-taker"
version = "0.1.0"
description = "A modular library for building AI-powered meeting note-taking applications with LiveKit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["livekit", "transcription", "ai", "meeting", "notes", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24.0",
    "livekit>=0.18.0",
    "livekit-api>=0.8.0",
]

[project.optional-dependencies]
# Core optional dependencies
aws = [
    "boto3>=1.34.0",
    "amazon-transcribe>=0.6.0",
]

ai = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "httpx>=0.24.0",
]

storage = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
]

export = [
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "jinja2>=3.1.0",
]

# Framework integrations
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-socketio>=5.10.0",
    "redis>=5.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# Complete installation with all features
all = [
    "livekit-note-taker[aws,ai,storage,export,fastapi]",
]

[project.urls]
Homepage = "https://github.com/yourusername/livekit-note-taker"
Documentation = "https://livekit-note-taker.readthedocs.io"
Repository = "https://github.com/yourusername/livekit-note-taker"
Issues = "https://github.com/yourusername/livekit-note-taker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["livekit_note_taker*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
